--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,12 @@ mail:
     password: dxvcwkttgftasmuk
 forgotPassword:
     required: confirm-required
+logging:
+  pattern:
+    file:  "->  %d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n"
+    dateformat: dd-MM-yyyy
+  level:
+    root: error
+  file:
+    path: C:/FroggyBlog/
+    name: '${logging.file.path}/logServer_%d.log'
