--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,21 +2,36 @@ server:
   port: 8080
 
 spring:
- datasource:
-   url: jdbc:mysql://localhost:3306/froggyblog?createDatabaseIfNotExist=true&serverTimezone=UTC
-   driver-class-name: com.mysql.cj.jdbc.Driver
-   username: root
-   password:
- jpa:
-   generate-ddl: true
-   properties:
-       hibernate:
-           dialect: org.hibernate.dialect.MySQL8Dialect
-           format_sql: true
-       show-sql: true
-   hibernate:
-     ddl-auto: update
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/froggyblog?createDatabaseIfNotExist=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password:
+  jpa:
+    generate-ddl: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+      show-sql: true
+    hibernate:
+      ddl-auto: update
+  security:
+    oauth2:
+      client:
+        registration:
+          facebook:
+            client-id: 516271610689759
+            client-secret: a4ad7a3d12fb07d26a36a4ba23f60738
+            redirect-uri: localhost:8080/login/oauth2/facebook
+            scope: email,public_profile,user_phone_numbers
+            client-name: Facebook
+          google:
+            clientId: 247004369428-vqr04dl1423u0lg6mmuna5ph85628c2t.apps.googleusercontent.com
+            clientSecret: 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
+            scope:
+                - email
+                - profile
 jwt:
    secretKey: geG-4w9NviA-h6kt2DASBZf0o8bRqp0VJd9PZuZg78s.bwUF7PMAWODIxqqyqErNfn1ZWmKtTqLcQDb7GVTueTg.hmvUpKfPFuy8C2YbSvkTCOSHUl693Kjl7W95rrdu9do
    expiredTimeAccess: 900000
