--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,3 +55,5 @@ logging:
   file:
     path: C:/FroggyBlog/
     name: '${logging.file.path}/logServer_%d.log'
+avatar:
+  path: https://ui-avatars.com/api/?color=fff&background=random&name=
