chore: update messages

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,5 +1,5 @@
 javax.validation.constraints.NotEmpty.message = You must not be empty
 javax.validation.constraints.NotNull.message = You must not be null
 javax.validation.constraints.NotBlank.message = You must not be blank
-javax.validation.constraints.Email.message = Email invalid!!!
-javax.validation.constraints.AssertFalse.message = Password and confirm password doesn't match
+javax.validation.constraints.Email.message = Your e-mail address is invalid, please use another one
+javax.validation.constraints.AssertFalse.message = Password and confirm password is mismatched, please try again
