--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,11 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   datasource:
-    url: jdbc:mysql://localhost:3306/froggyblog?createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
+    url: jdbc:mysql://localhost:3306/froggyblog?createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password:
+
   jpa:
     generate-ddl: true
     properties:
